# hr-holidays

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
hr_holidays_auto_extend/: README.rst  __manifest__.py
hr_holidays_calendar_event_privacy/: README.rst  __manifest__.py
hr_holidays_calendar_name/: README.rst  __manifest__.py
hr_holidays_credit/: README.rst  __manifest__.py
hr_holidays_cumulative_timeoff/: README.rst  __manifest__.py
hr_holidays_hour/: README.rst  __manifest__.py
hr_holidays_leave_auto_approve/: .flake8  README.rst  __manifest__.py
hr_holidays_leave_repeated/: README.rst  __manifest__.py
hr_holidays_leave_self_approve/: README.rst  __manifest__.py
hr_holidays_natural_period/: README.rst  __manifest__.py
hr_holidays_notify_employee_manager/: __manifest__.py
hr_holidays_overlap/: __manifest__.py
hr_holidays_overview/: __manifest__.py
hr_holidays_public/: README.rst  __manifest__.py
hr_holidays_public_city/: README.rst  __manifest__.py
hr_holidays_public_overtime/: README.rst  __manifest__.py
hr_holidays_remaining_leaves/: .gitignore  README.rst  __manifest__.py
hr_holidays_security/: README.rst  __manifest__.py
hr_holidays_settings/: README.rst  __manifest__.py
hr_holidays_summary_email/: README.rst  __manifest__.py
hr_holidays_type_visibility/: README.rst  __manifest__.py
hr_holidays_validator_list/: README.rst  __manifest__.py
hr_holidays_validity_date/: README.rst  __manifest__.py
hr_leave_custom_hour_interval/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+371 files in other folders)
