[project]
name = "odoo-addons-oca-hr-holidays"
version = "17.0.20240917.0"
dependencies = [
    "odoo-addon-hr_holidays_natural_period>=17.0dev,<17.1dev",
    "odoo-addon-hr_holidays_public>=17.0dev,<17.1dev",
    "odoo-addon-hr_holidays_public_city>=17.0dev,<17.1dev",
    "odoo-addon-hr_leave_custom_hour_interval>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
